k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tnt-engine
  namespace: tnt-engine
  labels:
    app: tnt-engine
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: tnt-engine
